# cost_estimation_network

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  monitoring.yml
app/: streamlit_app.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/metadata/: route.ts
frontend/src/app/api/monitoring/drift/: route.ts
frontend/src/app/api/monitoring/summary/: route.ts
frontend/src/app/api/predict/: route.ts
frontend/src/app/api/predictions/recent/: route.ts
frontend/src/lib/: backend.ts
scripts/: release_check.sh
src/laptop_price/: __init__.py  alerts.py  api.py  config.py  drift.py  features.py  logger.py  monitoring.py  ops.py  performance_history.py  predict.py  schemas.py  security.py  train.py  validation.py
tests/: conftest.py  test_alerts.py  test_api.py  test_drift.py  test_features.py  test_integration.py  test_monitoring.py  test_ops.py  test_predict.py  test_validation.py
