[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laptop-price"
version = "1.0.0"
description = "MLOps laptop price prediction pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pandera>=0.20.0",
    "pydantic>=2.9.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.38.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
laptop-train = "laptop_price.train:main"
laptop-api = "laptop_price.api:main"
laptop-drift = "laptop_price.drift:main"
laptop-alerts = "laptop_price.alerts:main"
laptop-ops = "laptop_price.ops:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["laptop_price"]

[tool.coverage.report]
show_missing = true
fail_under = 70
